# nyc_open_data

./: Makefile  pyproject.toml
codegen/: dataset_model.py.jinja  gen.py
nyc_open_data/: client.py  dataset.py
