[tool.poetry]
name = "nyc-open-data"
version = "0.1.0"
description = "Data access client for nyc open data"
authors = ["Ryan Grose <ryanwgrose@gmail.com>"]
readme = "README.md"
packages = [{ include = "nyc_open_data" }]

[tool.poetry.dependencies]
python = "^3.7.2"
returns = "^0.19.0"
sodapy = "^2.2.0"
pydantic = "^1.10.2"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.1.3"


[tool.poetry.group.build.dependencies]
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
